# rust-wordle

./: Cargo.toml  README.md  index.html
pkg/: rust_wordle.js  rust_wordle_bg.wasm
src/: game.rs  lib.rs  main.rs  matcher.rs  random_word.rs  word_list.rs
