[package]
name = "rust-wordle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
rstest = "0.15.0"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'HtmlInputElement',
    'Window',
]
